Use flexbox to fix alignment in nav bar

--- a/css/site.css
+++ b/css/site.css
@@ -45,8 +45,40 @@ h3, .chapter-num, .verse-num{
   right: 0;
   z-index: 100;
   width: 100%;
-  height: 50px;
   background-color:#68A99D;
+}
+
+.fixed-nav-bar .menu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: stretch;
+  align-self: auto;
+  vertical-align: center;
+  margin: auto;
+}
+
+.fixed-nav-bar .menu h1 {
+  margin: 0;
+}
+
+.fixed-nav-bar .left {
+  order: 0;
+  flex: 0 1 auto;
+  align-self: auto;
+}
+
+.fixed-nav-bar .center {
+  order: 0;
+  text-align: center;
+  flex: 1 1 auto;
+  align-self: auto;
+}
+
+.fixed-nav-bar .right {
+  order: 0;
+  flex: 0 1 auto;
+  align-self: auto;
 }
 
 /* The element at the top of the page right after the fixed navigation bar
@@ -72,127 +104,7 @@ h3, .chapter-num, .verse-num{
 .fixed-nav-bar .menu a:hover, .fixed-nav-bar .menu a:target {
   color: #ebebeb;
 }
-.fixed-nav-bar .menu-items {
-  display: inline-block;
-}
-.fixed-nav-bar .sitename {
-  display: inline-block;
-  margin-right: 20px;
-  margin-left: 10px;
-}
 .fixed-nav-bar a.sitename, .fixed-nav-bar a:visited.sitename {
   color: #e0e0e0;
 }
-.fixed-nav-bar .menu-items li {
-  display: inline-block;
-  margin-right: 10px;
-  margin-left: 10px;
-}
 
-/* overlay */
-#op{
-  display:none;
-}
-label:hover{
-  cursor:pointer;
-}
-
-.overlay{
-	position: fixed;
-  z-index:100;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background: rgba(0,0,0,0.9);
-}
-
-.overlay label{
-	width: 58px;
-	height:58px;
-	position: absolute;
-	right: 20px;
-	top: 20px;
-	background: url('http://tympanus.net/Development/FullscreenOverlayStyles/img/cross.png');
-	z-index: 100;
-  cursor:pointer;
-}
-
-.overlay nav {
-	text-align: center;
-	position: relative;
-	top: 50%;
-	height: 60%;
-	font-size: 54px;
-	-webkit-transform: translateY(-50%);
-	transform: translateY(-50%);
-}
-
-.overlay ul {
-	list-style: none;
-	padding: 0;
-	margin: 0 auto;
-	display: inline-block;
-	height: 100%;
-	position: relative;
-}
-
-.overlay ul li {
-	display: block;
-	height: 20%;
-	height: calc(100% / 5);
-	min-height: 54px;
-}
-
-.overlay ul li a {
-	font-weight: 300;
-	display: block;
-	color: white;
-  text-decoration:none;
-	-webkit-transition: color 0.2s;
-	transition: color 0.2s;
-  font-family: 'NotCourierSans';
-  text-transform:uppercase;
-}
-
-.overlay ul li a:hover,
-.overlay ul li a:focus {
-	color: #849368;
-}
-
-.fixed-nav-bar~.overlay-hugeinc{
-	opacity: 0;
-	visibility: hidden;
-	-webkit-transition: opacity 0.5s, visibility 0s 0.5s;
-	transition: opacity 0.5s, visibility 0s 0.5s;
-}
-
-#op:checked~.overlay-hugeinc{
-	opacity: 1;
-	visibility: visible;
-	-webkit-transition: opacity 0.5s;
-	transition: opacity 0.5s;
-}
-
-.overlay-hugeinc nav {
-	-moz-perspective: 300px;
-}
-
-.overlay-hugeinc nav ul {
-	opacity: 0.4;
-	-webkit-transform: translateY(-25%) rotateX(35deg);
-	transform: translateY(-25%) rotateX(35deg);
-	-webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
-	transition: transform 0.5s, opacity 0.5s;
-}
-
-#op:checked~.overlay-hugeinc nav ul {
-	opacity: 1;
-	-webkit-transform: rotateX(0deg);
-	transform: rotateX(0deg);
-}
-
-#op:not(:checked)~.overlay-hugeinc nav ul {
-	-webkit-transform: translateY(25%) rotateX(-35deg);
-	transform: translateY(25%) rotateX(-35deg);
-}
